Bug 149408 - Sort Years by Ascending; Current Method Incorrectly Sorts Numbers
Summary: Sort Years by Ascending; Current Method Incorrectly Sorts Numbers
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collection Browser (other bugs)
Version First Reported In: 1.4.6
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter C. Ndikuwera
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-31 09:03 UTC by Matt Hubert
Modified: 2007-09-15 10:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Exemple of confusion (85.74 KB, image/png)
2007-09-07 05:51 UTC, Robin Marsolier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Hubert 2007-08-31 09:03:52 UTC
Version:           1.4.5 (using KDE 3.5.6, Kubuntu (feisty) 4:3.5.6-0ubuntu14.1)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.20-16-generic

Currently Amarok sorts albums chronologically descending by year both in the collection browser and the context viewer. It didn't used to be this way, and I found the bug that changed it (#109975). This is very counterintuitive and creates a number of issues.

First, every other website sorts artists chronologically ascending. Look at AllMusic or any discography entry on Wikipedia and the oldest albums are first. Why? Because when you listen to a band, you start from when they started, and move in the same direction that they did: forward. It wouldn't make any sense to start in the future and move backwards?

Second, descending creates actual sorting errors when you are sorting "Volumes" of albums. Here is an excerpt out of my collection exactly how Amarok has it sorted:

2005 - Volume 6
2005 - Volume 7 [Disc 1]
2005 - Volume 7 [Disc 2]
2004 - Volume 4
2004 - Volume 5
2003 - Volume 3
2002 - Volume 1
2002 - Volume 2

That's simply a mess. It looks as if there was some sort of hack written to display multiple discs in the correct order, because unlike true descending order, the Disc 1 and Disc 2 are correct. However, this messes up every other album that was recorded in the same year. Apparently Amarok couldn't decide whether to sort ascending or descending, so it chose both! 

Sorting that artist ascending would fix that entire problem, and would natively work with Disc 1...Disc n.

It just makes more sense that way, because we don't listen to our music backwards. How do I know this for sure? Because drag any artist name into your playlist that has a bunch of albums, and it will queue it up in ascending order by year! (Despite the fact that it is sorted opposite in the collection viewer.) How about that...
Comment 1 shattered 2007-08-31 20:34:40 UTC
bug 141049 is related.
Comment 2 Robin Marsolier 2007-09-07 05:51:39 UTC
Created attachment 21559 [details]
Exemple of confusion

This is a representation of the confusion resulting of this 'bug'. It should be
self explanatory I think.
Comment 3 Robin Marsolier 2007-09-07 05:54:26 UTC
I have the exact same problem, with amaroK v.1.4.6, on Pardus Linux 2007.2. I find it very disturbing: When you select the 'ascending' sorting, the artist and the album are sorted accordingly, but the year is sorted descending. On the contrary, when you select 'descending', the year is now ascending, but not the album or the artist.
Really it makes no sense at all. Maybe this is useful for some people, I don't know, but couldn't this be made configurable ?
Comment 4 Matt Hubert 2007-09-07 08:15:48 UTC
All right, well I think we all realise that the bug exists. Does somebody who's able to want to mark it as confirmed?
Comment 5 Peter C. Ndikuwera 2007-09-07 15:25:21 UTC
The problem is that this 'bug' seems to be the approved way for Amarok to work. I remember changing the order many months ago - 1.4.1 or thereabouts - and it was reverted, so I'm reluctant to mark this as CONFIRMED. If I find the submitter, I'll try get his comments.
Comment 6 Matt Hubert 2007-09-10 01:24:25 UTC
Well, then may I suggest (as others have) having an option to either sort this way (currently dubbed as 'ascending', although it isn't), or sort in a normal, no-hacks-necessary 'descending' mode?
Comment 7 Matt Hubert 2007-09-10 01:27:43 UTC
I apologise, I got those backwards. Either sort the current way (dubbed 'descending') or sort in a new 'ascending' mode.
Comment 8 Peter C. Ndikuwera 2007-09-14 12:48:26 UTC
The "Volume 1", "Volume 2" bug has hit me too so... fix coming up..
Comment 9 Peter C. Ndikuwera 2007-09-14 12:51:28 UTC
SVN commit 712411 by pndiku:

BUG: 149408

Sort albums made in the same year alphabetically in 'ascending order',
e.g. for a hypothetical best of album:

2000 - The Best of, Volume 1
2000 - The Best of, Volume 2
1999 - Our First Album

as opposed to:

2000 - The Best of, Volume 2
2000 - The Best of, Volume 1
1999 - Our First Album



 M  +2 -2      contextbrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=712411
Comment 10 Matt Hubert 2007-09-15 03:37:03 UTC
Awesome, thank you much! But, that's only half the issue. Now we have descending order working properly, but what about ascending order?
Example:
1999 - Our First Album
2000 - The Best of, Volume 1
2000 - The Best of, Volume 2

Ascending should at least be an option, because it makes more sense to display your albums like that (for reasons outlined above in the main bug description). And, if you drag an artist into your playlist, it adds it as ascending, despite showing it as descending in the context browser (which I would say is technically a bug).

I'd say the proposed solution would be to display your albums in either ascending or our newly-functioning descending order, and depending how you display them, that is how they will be added into the playlist upon adding an artist.
Comment 11 Peter C. Ndikuwera 2007-09-15 10:23:14 UTC
Ah, I see.

Only issue is that we're not adding new configuration options for 1.4.
Maybe for 2.0 we'll do that. :-)