BUG: 149408

Sort albums made in the same year alphabetically in 'ascending order',
e.g. for a hypothetical best of album:

2000 - The Best of, Volume 1
2000 - The Best of, Volume 2
1999 - Our First Album

as opposed to:

2000 - The Best of, Volume 2
2000 - The Best of, Volume 1
1999 - Our First Album


svn path=/branches/stable/extragear/multimedia/amarok/; revision=712411